_rendered/apps/authentik/networking_k8s_io-ingress-authentik-authentik-server.yaml
# Source: authentik/charts/authentik/templates/server/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: authentik-server
  namespace: "authentik"
  labels:
    helm.sh/chart: "authentik-2026.5.6"
    app.kubernetes.io/name: "authentik"
    app.kubernetes.io/instance: "authentik"
    app.kubernetes.io/component: "server"
    app.kubernetes.io/managed-by: "Helm"
    app.kubernetes.io/part-of: "authentik"
    app.kubernetes.io/version: "2026.5.6"
  annotations:
    cert-manager.io/cluster-issuer: step-ca-internal
    traefik.ingress.kubernetes.io/router.middlewares: traefik-common-internal-access-allowlist@kubernetescrd
spec:
  rules:
    - host: "authentik.svc.elda"
      http:
        paths:
          - path: '/'
            pathType: Prefix
            backend:
              service:
                name: authentik-server
                port:
                  number: 80
  tls:
    - hosts:
      - authentik.svc.elda
      secretName: authentik-internal-cert
