_rendered/apps/authentik/cilium_io-ciliumnetworkpolicy-authentik-preset-cnp.yaml
# Source: authentik/charts/networkpolicy/templates/networkpolicy-preset.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  
  name: authentik-preset-cnp
spec:
  endpointSelector: {}
  ingress:
    - fromEndpoints:
        - {}
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: traefik
  egress:
    - toEndpoints:
        - {}
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
          rules:
            dns:
              - matchPattern: "*"
    - toFQDNs:
        - matchName: "version.goauthentik.io"
    - toEndpoints:
        - matchLabels:
            custom.network/postgresdb: "ingress"
          matchExpressions:
            - key: io.kubernetes.pod.namespace
              operator: Exists
